# piugame2csv

./: .gitignore  BUILD  MODULE.bazel  README.md  cli.py  creds.json.template  piugame2csv.py  pyproject.toml  requirements.in  requirements.txt  requirements_lock.txt
docs/superpowers/plans/: 2026-07-10-phoenix-url-update-plan.md  2026-07-10-phoenix2-cli-flag-plan.md  2026-07-10-refactor-config-plan.md
docs/superpowers/specs/: 2026-07-10-phoenix-url-update-design.md  2026-07-10-phoenix2-cli-flag-design.md  2026-07-10-refactor-config-design.md
piugame2csv/: cli.py  piugame2csv.py
