[tool.poetry]
name = "piugame2csv"
version = "0.1.0"
description = "Parses scores from piugame and outputs a CSV and posts scores to piugame.arroweclip.se"
authors = ["mryanlam <matt@mryanlam.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
piugame2csv = "piugame2csv.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
